heroku keep alive

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,7 +20,7 @@
    		<br>
    		Id: @data.get.id
    		<br>
-   		Link: http://@(request.host)/@data.get.id (konusmak istedigini kisiyle paylasiniz)
+   		Link: <span style="color:red">http://@(request.host)/@data.get.id</span> (konusmak istedigini kisiyle paylasiniz)
    		<br>
 		Durum: <span id="talkStatus">karsi taraf bekleniyor</span>
    		<br>
