--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -29,7 +29,7 @@
    		<div id="talkWindow">
 	   		<video id="local-stream" class="videostream" autoplay style="width: 173px;height:128px;border: 1px solid #Ebebeb;background:white;">local video</video>
 	   		<video id="remote-stream" class="videostream" autoplay style="width: 173px;height:128px;border: 1px solid #Ebebeb;background:white;">remote video</video>
-	   		
+	   		<input onclick="startVideo()" type="button" value="video baslat">
 	   		<div style="border:1px solid black;width:300px">
 	   			<div><b>Konusma Penceresi</b></div>
 		   		<div id="messages">
